# pypm2

./: .gitignore  CHECKSUMS.txt  CONTRIBUTING.md  LICENSE  PACKAGE_INFO.md  README.md  demo_complete_with_watch.sh  demo_watch_fastapi.sh  github_setup.sh  install.sh  publish_to_github.sh  pypm2-cli  pyproject.toml  requirements.txt  run_all_tests.sh  setup.py  test_watch_mode.sh  test_watch_script.py  validate_pypm2.sh
docs/: API.md  SYSTEMD.md  USAGE.md
examples/: advanced_worker.py  background_worker.py  fastapi_app.py  flask_app.py  simple_script.py
pypm2/: __init__.py  __main__.py  cli.py  config.py  manager.py  process.py  watcher.py
systemd/: install_systemd.sh  pypm2.service  setup_startup.sh  uninstall_systemd.sh
tests/: test_config.py  test_manager.py  test_process.py  test_watcher.py
